Fix show 10 more button hidden by footer

--- a/site/src/pages/Search/Search.css
+++ b/site/src/pages/Search/Search.css
@@ -178,6 +178,9 @@ button:hover {
     min-height: 100vh;
 }
 
+.show-more-button{
+    margin-bottom: 100px;
+}
 
 
 
